# video_receiver_helper

./: .gitmodules  CMakeLists.txt  custom_video_buffer.cpp  custom_video_buffer.h  media_receiver.cpp  media_receiver.h  video_receiver_helper.cpp  video_receiver_helper.h
media_recorder_util/: CMakeLists.txt  video_recorder_util.cpp  video_recorder_util.h
media_render_util/: CMakeLists.txt  video_render_util.cpp  video_render_util.h
rendering_server_client/: CMakeLists.txt  rendering_server_client.h
video_receiver/: CMakeLists.txt  video_frame_callback.h  video_track_receiver_impl.cpp
